k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: orders-active   # stable
spec:
  selector:
    app: orders-service
  ports:
    - port: 80
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: orders-preview  # canary
spec:
  selector:
    app: orders-service
  ports:
    - port: 80
      targetPort: 8080
